Revision history for App-Deps-Verify

0.12.0       2020-07-20
    - Added list_missing_python3_modules()

0.10.1       2020-04-29
    - Fix Kwalitee: "=head1 NAME"

0.10.0       2019-12-30
    - Add the plupdatetask sub command

0.8.3       2019-05-30
    - Fix doc issues.

0.8.2       2019-05-30
    - Add docs to bin/deps-app - thanks to xcombelle.

0.8.1       2019-05-30
    - Add support for the "gm" executable.

0.8.0       2019-02-08
    - Add support for multiple yamls to write_rpm_spec_text_to_fh .

0.6.0       2018-11-19
    - Add the --notest option to plinst.

0.4.0       2018-10-26
    - Allow the subcommands to accept several input files using -i flags.
        - For maintaining a common base.

0.2.1       2018-09-30
    - Add the plinst sub command.
        - p5inst was not detected by App-Cmd.

0.2.0       2018-09-30
    - Add the p5inst sub command.

0.0.1       2018-09-17
    - First version, released on an unsuspecting world