@@ -3,7 +3,7 @@ author  = Shlomi Fish <shlomif@cpan.org>
 license = MIT
 copyright_holder = Shlomi Fish
 copyright_year   = 2018
-version = 0.10.1
+version = 0.12.0
 
 [@Filter]
 -bundle = @SHLOMIF
