@@ -1,7 +1,8 @@
 Revision history for App-Deps-Verify
 
 0.12.0       2020-07-20
-    - Added list_missing_python3_modules()
+    - Add list_missing_python3_modules()
+    - Add the py3list sub command
 
 0.10.1       2020-04-29
     - Fix Kwalitee: "=head1 NAME"
